Minor edits in bib

--- a/ivcj_lfw.bib
+++ b/ivcj_lfw.bib
@@ -9,14 +9,14 @@
 }
 
 @article{cao2010face,
-  title={{Face recognition with learning-based descriptor}},
+  title={{Face Recognition With Learning-Based Descriptor}},
   author={Cao, Z. and Yin, Q. and Tang, X. and Sun, J.},
   journal={CVPR},
   year={2010}
 }
 
 @article{turk1991face,
-  title={{Face recognition using eigenfaces}},
+  title={{Face Recognition Using Eigenfaces}},
   author={Turk, M. and Pentland, A.},
   journal={CVPR},
   year={1991}
@@ -37,7 +37,7 @@
 }
 
 @article{belhumeur2002eigenfaces,
-  title={{Eigenfaces vs. fisherfaces: Recognition using class specific linear projection}},
+  title={{Eigenfaces Vs. Fisherfaces: Recognition Using Class Specific Linear Projection}},
   author={Belhumeur, P.N. and Hespanha, J.P. and Kriegman, D.J.},
   journal={PAMI},
   year={2002}
@@ -65,9 +65,9 @@
 }
 
 @article{yang2002kernel,
-  title={{kernel eigenfaces vs. kernel fisherfaces: face recognition using kernel methods}},
-  author={yang, m.h.},
-  journal={fg},
+  title={{Kernel Eigenfaces Vs. Kernel Fisherfaces: Face Recognition Using Kernel Methods}},
+  author={Yang, M.H.},
+  journal={FG},
   year={2002}
 }
 
@@ -119,8 +119,6 @@
 	Title = {{Why We Tag: Motivations for Annotation in Mobile and Online Media}},
 	Year = {2007}}
 
-
-
 @conference{stone2008afs,
 	Author = {Stone, Z. and Zickler, T. and Darrell, T.},
 	Booktitle = {Proc.~First IEEE Workshop on Internet Vision},
@@ -134,9 +132,9 @@
 	Year = {2010}}
 
 @article{ahonen2004face,
-  title={{face recognition with local binary patterns}},
-  author={ahonen, t. and hadid, a. and pietikainen, m.},
-  journal={eccv},
+  title={{Face Recognition With Local Binary Patterns}},
+  author={Ahonen, T. And Hadid, A. And Pietikainen, M.},
+  journal={ECCV},
   year={2004},
 }
 
@@ -155,7 +153,7 @@
 }
 
 @article{ahonen2006face,
-  title={{Face description with local binary patterns: Application to face recognition}},
+  title={{Face Description With Local Binary Patterns: Application To Face Recognition}},
   author={Ahonen, T. and Hadid, A. and others},
   journal={PAMI},
   year={2006},
@@ -496,7 +494,7 @@ year={2008},
 
  @article{pinto:cvpr09,
  author={N. Pinto and J. J. DiCarlo and D. D. Cox},
- title={{How far can you get with a modern face recognition test set using only simple features?}},
+ title={{How Far Can You Get With A Modern Face Recognition Test Set Using Only Simple Features?}},
  journal={CVPR},
  year={2009},
  }
@@ -609,36 +607,36 @@ year={2008},
 
 @misc{orl,
 author={{ORL Face Set}},
-title="http://www.cl.cam.ac.uk/Research/DTG/ attarchive/facedatabase.html",
+title="http://www.cl.cam.ac.uk/research/dtg/attarchive/facedatabase.html",
 key={Z},
-year={Accessed 06/20/2010},
+year={Accessed 06/30/2011},
 }
 
 @misc{yale,
 author={{Yale Face Set}},
-title="http://cvc.yale.edu",
+title="http://vision.ucsd.edu/~leekc/ExtYaleDatabase/ExtYaleB.html",
 key={Z},
-year={Accessed 06/20/2010},
+year={Accessed 06/30/2011},
 }
 
 @misc{cvl,
 author={{CVL Face Set}},
-title={http://www.lrv.fri.uni-lj.si/facedb.html},
+title={http://lrv.fri.uni-lj.si/facedb.html},
 key={Z},
-year={Accessed 06/20/2010},
+year={Accessed 06/30/2011},
 }
 
 @misc{ar,
 author={{AR Face Set}},
-title="http://cobweb.ecn.purdue.edu/~aleix/ar.html",
+title="http://www2.ece.ohio-state.edu/~aleix/ARdatabase.html",
 key={Z},
-year={Accessed 06/20/2010},
+year={Accessed 06/30/2011},
 }
 
 @misc{pycuda,
 author={{PyCUDA}},
 title = {http://mathema.tician.de/software/pycuda},
-year={Accessed 06/20/2010},
+year={Accessed 06/30/2011},
 }
 
 @article{phillips2000feret,
