--- a/results.tex
+++ b/results.tex
@@ -32,20 +32,21 @@ A major advantage of our high-throughput approach is that it produces not one,
 but a diversity of models, and this situation is ideally suited to kernel
 blending approaches.  Once blending is added, especially when coupled with an
 intelligent algorithm for weighting blended kernels, several different blends
-achieved performance exceeding previously reported state-of-the-art values (see Figure \ref{fig:table_soa}).  ROC 
+achieved performance exceeding previously reported state-of-the-art values (see Figure \ref{fig:table_soa}).  ROC
 curves for various blend groupings are shown in Fig. \ref{fig:roc_curves}.
 
 \begin{figure*}[ht]
-\centering 
+\centering
 \subfigure[\small{within-model-class blends}]{
-  \includegraphics[scale=0.9]{figures/within_roc.pdf}
+  \includegraphics[scale=0.8]{figures/within_roc.pdf}
   \label{fig:within_rocs}
-} 
+}
 \subfigure[\small{across-model-class blends}]{
-  \includegraphics[scale=0.9]{figures/mega_blend_roc.pdf}
+  \includegraphics[scale=0.8]{figures/mega_blend_roc.pdf}
   \label{fig:megablend_rocs}
 }
 \subfigure[\small{comparison with literature}]{
+    \small{
     \begin{tabular}{|c||c|c|c|c|}
 \hline
 %Reference & Kumar et al. ICCV09 \cite{kumar:iccv09} & Wolf et al. ACCV09 \cite{wolf:accv09} & Cao et al. CVPR10 \cite{cao2010face} & This paper \\
@@ -55,11 +56,11 @@ Reference & ICCV09 \cite{kumar:iccv09} & ACCV09 \cite{wolf:accv09} & CVPR10 \cit
 Mean classification error & 14.7\%$\pm$1.2 & 13.2\%$\pm$0.3 & 15.5\%$\pm$0.5 & \bf{11.9\%$\pm$0.6} \\
 \hline
 \end{tabular}
+    }
 \label{fig:table_soa}
 }
-
 \caption[]{{\bf ROC curves for various model sub-families on \emph{LFW}
-    Restricted View 2.} Curves for \cite{wolf:accv09}, \cite{kumar:iccv09} and \cite{cao2010face} 
+    Restricted View 2.} Curves for \cite{wolf:accv09}, \cite{kumar:iccv09} and \cite{cao2010face}
   are plotted in \ref{fig:megablend_rocs} for reference.  Plots are zoomed-in to
   facilitate comparison.}
 \label{fig:roc_curves}
@@ -67,7 +68,7 @@ Mean classification error & 14.7\%$\pm$1.2 & 13.2\%$\pm$0.3 & 15.5\%$\pm$0.5 & \
 
 
 \begin{figure*}[ht]
-  \centering \subfigure[Misses]{ 
+  \centering \subfigure[Misses]{
     \includegraphics[scale=0.8]{figures/misses.pdf}
     \label{fig:misses}
   } \subfigure[False Positives]{
@@ -130,29 +131,29 @@ The synthetic face evaluation sets used here provide us with the ability to para
 To further explore the behavior of our models with a controlled stimulus, we examined model
 performance as a function of the number of faces to be discriminated.  In particular, we
 considered cases with two, four, six, and eight faces.  Performance, grouped by model is shown
-in Figure \ref{fig:nfaces_by_model}, and is shown grouped by variation level in 
+in Figure \ref{fig:nfaces_by_model}, and is shown grouped by variation level in
 Figure \ref{fig:nfaces_by_variation}.  Predictably, absolute performance level is depressed as a larger
 number of faces is considered, as is the chance performance level (dotted line). Interestingly, the
 rate at which performance falls off varies between models as a function of both number of faces
-to be discriminated, and as a function of variation level.  The stability of the performance of the 
-largest/deepest model --- HT-L3-1st --- is most pronounced when large number of faces and large amounts of variation 
+to be discriminated, and as a function of variation level.  The stability of the performance of the
+largest/deepest model --- HT-L3-1st --- is most pronounced when large number of faces and large amounts of variation
 are considered.  Differences between models are far less pronounced with smaller numbers of
 faces and lesser degrees of variation.
- 
+
 % -------------------------------------
 %  N Faces Figure 2
 % -------------------------------------
 
 \begin{figure*}[ht!]
-\centering 
+\centering
 \subfigure[\small{V1-like}]{
   \includegraphics[scale=0.65]{figures/nfaces_variation_NaturalBg_v1like_a_plus.pdf}
   \label{fig:nfaces_v1like}
-} 
+}
 \subfigure[\small{HT-L2-1st}]{
   \includegraphics[scale=0.65]{figures/nfaces_variation_NaturalBg_ht1_1_l2_1st.pdf}
   \label{fig:nfaces_l2}
-} 
+}
 \subfigure[\small{HT-L3-1st}]{
   \includegraphics[scale=0.65]{figures/nfaces_variation_NaturalBg_ht1_1_l3_1st.pdf}
   \label{fig:nfaces_l3}
@@ -166,15 +167,15 @@ faces and lesser degrees of variation.
 % -------------------------------------
 
 \begin{figure*}[ht]
-\centering 
+\centering
 % \subfigure[\small{no variation}]{
 %   \includegraphics[scale=0.6]{figures/nfaces_variation0_by_model.pdf}
 %   \label{fig:nfaces_var0}
-% } 
+% }
 \subfigure[\small{variation level 2}]{
   \includegraphics[scale=0.7]{figures/nfaces_variation2_by_model.pdf}
   \label{fig:nfaces_var2}
-} 
+}
 \subfigure[\small{variation level 4}]{
   \includegraphics[scale=0.7]{figures/nfaces_variation4_by_model.pdf}
   \label{fig:nfaces_var4}
@@ -198,15 +199,15 @@ To explore the role of background variation, we evaluated model performance with
 % -------------------------------------
 
 \begin{figure*}[ht]
-\centering 
+\centering
 % \subfigure[\small{no variation}]{
 %   \includegraphics[scale=0.45]{figures/bg_variation0_by_model.pdf}
 %   \label{fig:bg_var0}
-% } 
+% }
 \subfigure[\small{variation level 2}]{
   \includegraphics[scale=0.55]{figures/bg_variation2_by_model.pdf}
   \label{fig:bg_var2}
-} 
+}
 \subfigure[\small{variation level 4}]{
   \includegraphics[scale=0.55]{figures/bg_variation4_by_model.pdf}
   \label{fig:bg_var4}
