--- a/ivcj_lfw.tex
+++ b/ivcj_lfw.tex
@@ -31,7 +31,7 @@
 \begin{frontmatter}
 
 \title{
-Beyond Simple Features: A Large-Scale Feature Search Approach to Unconstrained Face Recognition
+High-Throughput-derived Biologically-Inspired Features for Unconstrained Face Recognition
 }
 
 \author[rowland,mit]{Nicolas Pinto}
