--- a/introduction.tex
+++ b/introduction.tex
@@ -11,7 +11,7 @@ recently, thanks in large part to the rise of the internet, it has become
 possible to assemble large collections of face images ``in the wild'' in the
 sense that they come from a wide variety of sources and were not posed for the
 purpose of research.  While this set has proven to be quite challenging, large
-strides have been in made in recent years towards higher performance
+strides have been made in recent years towards higher performance
 \cite{pinto:eccv08,pinto:cvpr09,taigman:bmvc09,wolf:accv09,kumar:iccv09,cao2010face}.
 
 While a variety of different approaches to the \emph{LFW} set have been taken,
