Missing references, typos

--- a/introduction.tex
+++ b/introduction.tex
@@ -28,7 +28,7 @@ developing new or better features.
 
 One potentially promising source for new, more complex visual feature representations is the
 class of ``biologically-inspired'' representations.
-Biologically-inspired approaches seek to build artificial visual 
+These approaches seek to build artificial visual 
 systems that capture aspects of the computational architecture of the brain, in the hope of
 eventually mimicking its computational abilities. Such efforts to model visual
 computations done by the brain have a long history, at least dating back to
