--- a/ivcj_lfw.tex
+++ b/ivcj_lfw.tex
@@ -21,6 +21,7 @@
 \usepackage{array} \newcommand{\vectornorm}[1]{\left|\left|#1\right|\right|}
 \newcommand{\foreign}[1]{\emph{#1}}
 
+\hyphenation{Bio-logic-ally-ins-pi-red}
 %===========================================================
 
 %\author{Anonymous Submission}
