--- a/methods.tex
+++ b/methods.tex
@@ -496,8 +496,8 @@ driven by performance on the View 1 set, thereby avoiding selection bias artifac
 
 In order to assess model performance on an image set with a known amount of variation, 
 we generated a set of 3D-rendered face images.  3D face meshes were randomly generated
-using the FaceGen \cite{facegen} software package and were rendered using
-the free POV-Ray ray-tracer \cite{povray}.  For each rendered image, a model rotation 
+using the FaceGen software package and were rendered using
+the free POV-Ray ray-tracer.  For each rendered image, a model rotation 
 (azimuth and elevation), position (x and y), and scale were drawn from a uniform 
 distribution and the models were rendered with a common light source (Figure \ref{fig:variation_levels}).  
 For the experiments presented here, rotation, size, and position were combined into
