--- a/ivcj_lfw.tex
+++ b/ivcj_lfw.tex
@@ -127,7 +127,7 @@ face recognition \sep biologically-inspired
 % -----------------------------------------------------------------------------
 \section{Acknowledgments}
 % -----------------------------------------------------------------------------
-The authors would like to thank Hanspeter Pfister, Wen-Mei Hwu, Volodymyr
+The authors would like to thank Hanspeter Pfister, Wen-Mei Hwu, Vlad
 Kindratenko and Jeremy Enos for making additional GPU clusters available for
 this work. This work was funded by the Rowland Institute of Harvard, the NVIDIA
 Graduate Fellowship, and the National Science Foundation (IIS 0963668).
