--- a/ivcj_lfw.tex
+++ b/ivcj_lfw.tex
@@ -42,7 +42,7 @@ High-Throughput-derived Biologically-Inspired Features for Unconstrained Face Re
 \ead{cox@rowland.harvard.edu}
 
 \address[rowland]{The Rowland Institute at Harvard, Harvard University, Cambridge, MA 02142}
-\address[mit]{McGovern Institute for Brain Science at MIT, Cambridge, MA 02139}
+\address[mit]{McGovern Institute for Brain Research at MIT, Cambridge, MA 02139}
 
 
 %===========================================================
