Straggling uncommitted edits

--- a/discussion.tex
+++ b/discussion.tex
@@ -3,7 +3,7 @@ Our results provide more evidence that biologically-inspired models represent a 
 and powerful direction in face recognition research. Individual models from this
 class are able to achieve good performance (e.g. around 77\% for \emph{V1-like} models,
 84\% for \emph{HT-L3}), and blends of these models achieve more than 88\%
-correct performance, beating previously reported state-of-the-art values.
+correct performance, placing it amongst the best performing systems on this challenge set.
 
 Consistent with expectations, progressively more complex, multi-layer models are
 able to outperform the simpler \emph{V1-like} model. Whether this higher
