--- a/ivcj_lfw.bib
+++ b/ivcj_lfw.bib
@@ -751,5 +751,15 @@ journal={Visual Cognition},
 year={2002}
 }
 
+@misc{povray,
+author={{POV-Ray Raytracer}},
+title={www.povray.org},
+year = {Accessed 07/15/2010}}
+
+@misc{facegen,
+author={{FaceGen}},
+title={singularinversions.com},
+year = {Accessed 07/15/2010}}
+
 
 
