Edits in response to reviewers

--- a/methods.tex
+++ b/methods.tex
@@ -493,6 +493,7 @@ We note that the choice of blending strategies to consider on the View 2 set was
 driven by performance on the View 1 set, thereby avoiding selection bias artifacts.
 
 \subsection{Additional Testing with Synthetic Face Images}
+\label{synthetic_methods}
 
 In order to assess model performance on an image set with a known amount of variation, 
 we generated a set of 3D-rendered face images.  3D face meshes were randomly generated
